@@ -40,6 +40,8 @@ Qucs equations.<br><br>
 <tr><td><tt>runavg(x)</tt></td><td>running average of values in vector</td></tr>
 <tr><td><tt>stddev(x)</tt></td><td>standard deviation of values in vector</td></tr>
 <tr><td><tt>variance(x)</tt></td><td>variance of values in vector</td></tr>
+<tr><td><tt>random()</tt></td><td>random number between 0.0 and 1.0</td></tr>
+<tr><td><tt>srandom(x)</tt></td><td>give random seed</td></tr>
 <tr><td><tt>rms(x)</tt></td><td>root mean square of a vector</td></tr>
 <tr><td><tt>sum(x)</tt></td><td>sum of values in vector</td></tr>
 <tr><td><tt>prod(x)</tt></td><td>product of values in vector</td></tr>
@@ -192,6 +194,15 @@ possible values for <tt>"from"</tt> and <tt>"to"</tt> are 'Y', 'Z', 'H', 'G',
 <tr><td><tt>M</tt></td><td>the whole matrix M</td></tr>
 <tr><td><tt>M[2,3]</tt></td><td>element being in 2nd row and 3rd column of matrix M</td></tr>
 <tr><td><tt>M[:,3]</tt></td><td>vector consisting of 3rd column of matrix M</td></tr>
+</table>
+<br>
+
+<b>Immediate nomenclature</b>
+<table cellspacing=2 cellpadding=2>
+<tr><td><tt>2.5</tt></td><td>real number</td></tr>
+<tr><td><tt>1.4+j5.1</tt></td><td>complex number</td></tr>
+<tr><td><tt>[1,3,5,7]</tt></td><td>vector</td></tr>
+<tr><td><tt>[11,12;21,22]</tt></td><td>matrix</td></tr>
 </table>
 <br>
 
